add public monitor feature

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TWILIO_SID=
 TWILIO_TOKEN=
+TWILIO_NUMBER=
+
+MONITOR_HASHID_SALT=SALTY_SALT
+MONITOR_HASHID_LENGTH=16
